update nav to ensure nav link focus state is hidden when overflowing

--- a/style.css
+++ b/style.css
@@ -146,7 +146,6 @@ header nav {
     align-items: center;
     height: 100vh;
     width: 0;
-    overflow: hidden;
     background-color: rgba(255,255,255,0.95);
     border-radius: 0.5rem;
     transition: width 0.3s;
